# vm-config

./: CMakeLists.txt  README.md
vm-config/: SMBytesWritter.c  SMBytesWritter.h  SMCommandLineOptions.c  SMCommandLineOptions.h  SMError.c  SMError.h  SMStringHelper.c  SMStringHelper.h  SMVMwareNVRAM.c  SMVMwareNVRAM.h  SMVMwareNVRAMHelper.c  SMVMwareNVRAMHelper.h  SMVMwareVMX.c  SMVMwareVMX.h  SMVMwareVMXHelper.c  SMVMwareVMXHelper.h  SMVersion.c  SMVersion.h  SMVersionHelper.c  SMVersionHelper.h  main.c  main.h
vm-config-ut/: MainTests.m  PrefixHeader.pch  SMBytesWritterTests.m  SMCommandLineOptionsTests.m  SMCommandLineTests.m  SMErrorTests.m  SMStringHelperTests.m  SMTestCase.h  SMTestCase.m  SMTestsTools.h  SMVMwareNVRAMTests.m  SMVMwareVMXTests.m  SMVersionHelperTests.m  SMVersionTests.m
vm-config-ut/resources/: basic-1.nvram  basic-1.vmx  chaotic-1.vmx  empty-1.vmx  fail-1.nvram  fail-1.vmx  fail-2.nvram  fail-2.vmx  fail-3.nvram  fail-3.vmx  fail-4.nvram  guestos-1.vmx  guestos-2.vmx
vm-config.xcodeproj/: project.pbxproj
vm-config.xcodeproj/xcshareddata/xcschemes/: vm-config-ut.xcscheme  vm-config.xcscheme
